--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,4 +8,88 @@
 	.header_title h1 {
 		font-size: 50px;
 	}
+	.header_title h4 {
+		font-size: 18px;
+	}
+}
+
+@media screen and (min-width: 345px) {
+	.header_title h1 {
+		font-size: 32px;
+	}
+
+	.header_title h4 {
+		font-size: 14px;
+	}
+
+}
+
+@media screen and (min-width: 0px) and (max-width: 549px) {
+	.content {
+		width: 100%;
+	}
+
+	.header_title h1 {
+		font-size: 28px;
+	}
+
+	.header_title h4 {
+		font-size: 14px;
+	}
+
+	.featured_works h2{
+		font-size: 18px;
+	}
+
+	.work_item {
+		padding: 0;
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	.work_item h3 {
+		order: -1;
+		width: 100%;
+		font-size: 15px;
+	}
+
+	.works_images {
+		width: 100%;
+	}
+
+	.work_item img {
+		width: 100%;
+	}
+
+	.description {
+		width: 50%;
+		text-align: left;
+		font-size: 13px;
+		vertical-align: middle;
+	}
+
+	.item_image {
+		width: 50%;
+	}
+}
+
+@media screen and (min-width: 451px) {
+	.footer_title h2 {
+		font-size: 24px;
+	}
+	.header_title h1 {
+		font-size: 32px;
+	}
+
+	.header_title h4 {
+		font-size: 14px;
+	}
+
+	.description p {
+		size: 16px;
+	}
+
+	.work_item h3 {
+		font-size: 18px;
+	}
 }
