--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,18 +1,3 @@
-@media screen and (min-width: 850px) {
-	.content {
-		width: 850px; 
-		padding: 0; 
-		margin-right: auto;
-		margin-left: auto;
-	}
-	.header_title h1 {
-		font-size: 50px;
-	}
-	.header_title h4 {
-		font-size: 18px;
-	}
-}
-
 @media screen and (min-width: 345px) {
 	.header_title h1 {
 		font-size: 32px;
@@ -91,5 +76,38 @@
 
 	.work_item h3 {
 		font-size: 18px;
+	}
+}
+
+@media screen and (min-width: 550px) and (max-width: 849px) {
+	.work_item {
+		width: 50%;
+	}
+
+	.header_title h1 {
+		font-size: 40px;
+	}
+
+	.header_title h4 {
+		font-size: 14px;
+	}
+}
+
+@media screen and (min-width: 850px) {
+	.content {
+		width: 850px; 
+		padding: 0; 
+		margin-right: auto;
+		margin-left: auto;
+	}
+	.header_title h1 {
+		font-size: 50px;
+	}
+
+	.header_title h4 {
+		font-size: 18px;
+	}
+	.work_item {
+		width: 33%;
 	}
 }
