--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,14 +1,3 @@
-@media screen and (min-width: 345px) {
-	.header_title h1 {
-		font-size: 32px;
-	}
-
-	.header_title h4 {
-		font-size: 14px;
-	}
-
-}
-
 @media screen and (min-width: 0px) and (max-width: 549px) {
 	.content {
 		width: 100%;
@@ -56,6 +45,10 @@
 	.item_image {
 		width: 50%;
 	}
+
+	.header_logo_image {
+		max-width: 100px;
+	}
 }
 
 @media screen and (min-width: 451px) {
@@ -85,11 +78,14 @@
 	}
 
 	.header_title h1 {
-		font-size: 40px;
+		font-size: 50px;
 	}
 
 	.header_title h4 {
-		font-size: 14px;
+		font-size: 16px;
+	}
+	.header_logo_image {
+		max-width: 140px;
 	}
 }
 
@@ -109,5 +105,8 @@
 	}
 	.work_item {
 		width: 33%;
+	}
+	.header_logo_image {
+		max-width: 150px;
 	}
 }
