--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,17 @@ html, body {
 	margin: 0;
 	display: block;
 	font-family: 'Lato', sans-serif;
+	color: #2d3c49;
+}
+
+h1, h2, h3, h4, p, a {
+	color: #2d3c49;
 }
 
 .header, .header_title, .main, .footer, .footer_title {
 	padding: 0;
 	margin: 0;
+	color #2d3c49;
 }
 
 .header_logo {
@@ -54,6 +60,7 @@ html, body {
 	padding: 0;
 	padding-left: 10px;
 	margin-bottom: 0;
+	color: #7d97ad;
 }
 
 .work_item {
@@ -82,7 +89,9 @@ html, body {
 
 .hr {
 	width: 100%;
-	height: 2px;
+	height: 5px;
+	border-color: #7d97ad;
+	border-width: 3px;
 }
 
 .img-responsive {
@@ -96,3 +105,4 @@ html, body {
 .description {
 	padding: 10px;
 }
+
