--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,10 @@
+/* General styles */
 html, body {
 	max-width: 100%;
 	padding: 0;
 	margin: 0;
 	display: block;
-	font-family: 'Lato', sans-serif;
+	font-family: "Lato", sans-serif;
 	color: #2d3c49;
 }
 
@@ -14,9 +15,9 @@ h1, h2, h3, h4, p, a {
 .header, .header_title, .main, .footer, .footer_title {
 	padding: 0;
 	margin: 0;
-	color #2d3c49;
 }
 
+/* Header style */
 .header_logo {
 	width: 30%;
 	padding: 0;
@@ -33,23 +34,30 @@ h1, h2, h3, h4, p, a {
 	margin-top: 10px;
 }
 
-
-.content {
-	max-width: 100%;
-	margin: auto;
-}
-
+/* Horizontal rule style */
 .horizontal_rule { 
 	width: 100%;
-	padding-left: 0;
-	padding-right: 0;
-	margin-left: 0;
-	margin-right: 0;
-	padding-top: 5px;
-	padding-bottom: 5px;
+	padding: 5px 0 5px 0;
+	margin: 0;
+}
+
+.hr_content {
+	padding: 0;
+}
+
+.hr {
+	width: 100%;
+	height: 5px;
+	border-top: solid 3px #7d97ad;
+}
+
+/* Main content style */
+.main_image {
+	padding: 0;
 }
 
 
+/* Footer style */
 .footer {
 	display: flex;
 	flex-wrap: wrap;
@@ -57,8 +65,7 @@ h1, h2, h3, h4, p, a {
 
 .featured_works {
 	margin-left: 0;
-	padding: 0;
-	padding-left: 10px;
+	padding: 0 0 0 10px;
 	margin-bottom: 0;
 	color: #7d97ad;
 }
@@ -72,7 +79,7 @@ h1, h2, h3, h4, p, a {
 }
 
 .works_image {
-	margin-left: 0;
+	margin: 0;
 	padding: 0;
 	width: 100%;
 }
@@ -81,25 +88,6 @@ h1, h2, h3, h4, p, a {
 	margin-right: 0;
 	padding: 0;
 	border: none;
-}
-
-.hr_content {
-	padding: 0;
-}
-
-.hr {
-	width: 100%;
-	height: 5px;
-	border-color: #7d97ad;
-	border-width: 3px;
-}
-
-.img-responsive {
-	width: 100%;
-}
-
-.main_image {
-	padding: 0;
 }
 
 .description {
